Fix page counter wrap

--- a/packages/commonwealth/client/scripts/views/pages/Communities/TokenLaunchDrawer/QuickTokenLaunchForm/QuickTokenLaunchForm.scss
+++ b/packages/commonwealth/client/scripts/views/pages/Communities/TokenLaunchDrawer/QuickTokenLaunchForm/QuickTokenLaunchForm.scss
@@ -26,8 +26,9 @@
 
     .cta-elements {
       display: flex;
+      flex-wrap: wrap;
       flex-direction: row;
-      justify-content: space-between;
+      justify-content: end;
       align-items: center;
       gap: 16px;
 
